--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -7,8 +7,8 @@
   width: 100%;
   margin-top: 2rem;
   display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
+  /* gap: 1rem;
+  flex-wrap: wrap; */
   justify-content: space-between;
   /* overflow-x: scroll; */
 }
