--- a/src/pages/Home/components/banner.css
+++ b/src/pages/Home/components/banner.css
@@ -1,14 +1,87 @@
 .app__banner {
   width: 100%;
-  height: 400px;
+  height: auto;
   display: flex;
-  align-items: flex-end;
-  padding: 2rem;
+  justify-content: space-between;
+  color: var(--color-golden);
+  cursor: grab;
 }
 
-.app__banner h2 {
-  color: var(--color-golden);
-  font-size: 30px;
-  text-shadow: -1px -1px 0 var(--color-black), 1px -1px 0 var(--color-black),
-    -1px 1px 0 var(--color-black), 1px 1px 0 var(--color-black);
+.app__banner-text {
+  width: 40%;
+  align-self: center;
+}
+
+.app__banner-text h2 {
+  color: var(--color-lgrey);
+  font-size: 60px;
+}
+
+.banner-date {
+  color: var(--color-dgrey);
+}
+
+.banner-details {
+  margin-top: 2rem;
+  font-size: 20px;
+}
+
+.app__banner-text button {
+  padding: 0.5rem;
+  background-color: var(--color-black);
+  color: var(--color-lgrey);
+  outline: none;
+  border: 1px solid var(--color-golden);
+  margin-top: 1rem;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.app__banner-text button:hover {
+  background-color: var(--color-golden);
+  color: var(--color-black);
+}
+
+.app__banner-image {
+  width: 900px;
+}
+
+.app__banner-image img {
+  width: 100%;
+  border-radius: 2rem;
+  object-fit: contain;
+}
+
+@media (max-width: 1600px) {
+  .app__banner-image {
+    width: 700px;
+  }
+}
+
+@media (max-width: 1350px) {
+  .app__banner-image {
+    width: 500px;
+  }
+
+  .app__banner-text h2 {
+    font-size: 40px;
+  }
+
+  .banner-details {
+    font-size: 18px;
+    margin-top: 1rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .app__banner {
+    flex-direction: column;
+    height: auto;
+    gap: 1rem;
+  }
+
+  .app__banner-text,
+  .app__banner-image {
+    width: 100%;
+  }
 }
