--- a/src/pages/Home/components/banner.css
+++ b/src/pages/Home/components/banner.css
@@ -2,13 +2,14 @@
   width: 100%;
   height: auto;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  gap: 1rem;
   color: var(--color-golden);
   cursor: grab;
 }
 
 .app__banner-text {
-  width: 40%;
+  flex: 1;
   align-self: center;
 }
 
@@ -43,7 +44,8 @@
 }
 
 .app__banner-image {
-  width: 900px;
+  width: 800px;
+  flex: 0 0 auto;
 }
 
 .app__banner-image img {
