--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,8 @@ a {
 }
 
 .wrapper {
-  padding: 2rem 8rem;
-  overflow: hidden;
-  /* overflow-x: scroll; */
+  /* padding: 2rem 8rem; */
+  width: 80%;
+  margin: 0 auto;
+  max-width: 1400px;
 }
-
-/* ::-webkit-scrollbar {
-  display: none;
-} */
